Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -798,5 +798,6 @@
   "dn16:4.4.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:4.5.0": "22. Četiri velika izvora učenja",
   "dn16:4.5.1": "Kada je ostao kraj Bhaṇde koliko je želeo, Blaženi reče poštovanom Ānandi:",
-  "dn16:4.5.2": "„Hajde, Ānanda, idemo do Hatthigāme,"
+  "dn16:4.5.2": "„Hajde, Ānanda, idemo do Hatthigāme,",
+  "dn16:4.5.3": "do Anbagāme,"
 }
