Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -800,5 +800,6 @@
   "dn16:4.5.1": "Kada je ostao kraj Bhaṇde koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:4.5.2": "„Hajde, Ānanda, idemo do Hatthigāme,",
   "dn16:4.5.3": "do Anbagāme,",
-  "dn16:4.5.4": "do Đambugāme,"
+  "dn16:4.5.4": "do Đambugāme,",
+  "dn16:4.5.5": "do Bhoganagare.”"
 }
