--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -801,5 +801,6 @@
   "dn16:4.5.2": "„Hajde, Ānanda, idemo do Hatthigāme,",
   "dn16:4.5.3": "do Anbagāme,",
   "dn16:4.5.4": "do Đambugāme,",
-  "dn16:4.5.5": "do Bhoganagare.”"
+  "dn16:4.5.5": "do Bhoganagare.”",
+  "dn16:4.6.1": "„Da, poštovani gospodine,” odgovori Ānanda."
 }
