Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -802,5 +802,6 @@
   "dn16:4.5.3": "do Anbagāme,",
   "dn16:4.5.4": "do Đambugāme,",
   "dn16:4.5.5": "do Bhoganagare.”",
-  "dn16:4.6.1": "„Da, poštovani gospodine,” odgovori Ānanda."
+  "dn16:4.6.1": "„Da, poštovani gospodine,” odgovori Ānanda.",
+  "dn16:4.6.2": "I tako Blaženi, praćen velikom grupom monaha, stiže u Bhoganāgaru."
 }
