--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -804,5 +804,6 @@
   "dn16:4.5.5": "do Bhoganagare.”",
   "dn16:4.6.1": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:4.6.2": "I tako Blaženi, praćen velikom grupom monaha, stiže u Bhoganāgaru.",
-  "dn16:4.7.1": "Tu se smestio kraj Ānanda svetilišta."
+  "dn16:4.7.1": "Tu se smestio kraj Ānanda svetilišta.",
+  "dn16:4.7.2": "I na tom mestu ovako reče monasima:"
 }
