Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -809,5 +809,6 @@
   "dn16:4.7.3": "„Monasi, podučiću vas o četiri važna izvora.",
   "dn16:4.7.4": "Slušajte i dobro zapamtite šta ću vam reći.”",
   "dn16:4.7.5": "„Da, poštovani gospodine,” odgovoriše monasi.",
-  "dn16:4.7.6": "A Blaženi ovako nastavi:"
+  "dn16:4.7.6": "A Blaženi ovako nastavi:",
+  "dn16:4.8.1": "(1) „Ima slučajeva, monasi, da neki monah ovako kaže:"
 }
