--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -812,5 +812,6 @@
   "dn16:4.7.6": "A Blaženi ovako nastavi:",
   "dn16:4.8.1": "(1) „Ima slučajeva, monasi, da neki monah ovako kaže:",
   "dn16:4.8.2": "’Prijatelju, ovako sam čuo iz usta Blaženog, ovako sam naučio:",
-  "dn16:4.8.3": "„Ovo je učenje, ovo su pravila, ovo je učiteljeva pouka.”’"
+  "dn16:4.8.3": "„Ovo je učenje, ovo su pravila, ovo je učiteljeva pouka.”’",
+  "dn16:4.8.4": "Reči takvog monaha ne bi trebalo ni da odobravate, niti da odbacite."
 }
