--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -814,5 +814,6 @@
   "dn16:4.8.2": "’Prijatelju, ovako sam čuo iz usta Blaženog, ovako sam naučio:",
   "dn16:4.8.3": "„Ovo je učenje, ovo su pravila, ovo je učiteljeva pouka.”’",
   "dn16:4.8.4": "Reči takvog monaha ne bi trebalo ni da odobravate, niti da odbacite.",
-  "dn16:4.8.5": "Umesto toga, treba da ih dobro zapamtite i uporedite sa ostalim govorima, potražite među ostalim pravilima."
+  "dn16:4.8.5": "Umesto toga, treba da ih dobro zapamtite i uporedite sa ostalim govorima, potražite među ostalim pravilima.",
+  "dn16:4.8.6": "Ukoliko, upoređujući ih sa ostalim govorima i tražeći ih među ostalim pravilima, ne možete da ih nađete ni u govorima, ni u pravilima, donesite ovakav zaključak:"
 }
