--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.131_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.131:0.1": "Verbundene Lehrreden 35.131 "
+  "sn35.131:0.1": "Verbundene Lehrreden 35.131 ",
+  "sn35.131:0.2": "13. Das Kapitel mit Hausbesitzern "
 }
