Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -1008,6 +1008,7 @@
   "sn-name:1114.sn35.128": "Mit Soṇa ",
   "sn-name:1115.sn35.129": "Mit Ghosita ",
   "sn-name:1116.sn35.130": "Mit Hāliddikāni ",
+  "sn-name:1117.sn35.131": "Nakulas Vater ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
   "sn-name:1121.sn35.134": "Bei Devadaha ",
