Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.131_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn35.131:0.1": "Verbundene Lehrreden 35.131 ",
   "sn35.131:0.2": "13. Das Kapitel mit Hausbesitzern ",
-  "sn35.131:0.3": "Nakulas Vater "
+  "sn35.131:0.3": "Nakulas Vater ",
+  "sn35.131:1.1": "Einmal hielt sich der Buddha im Land der Bhagger auf dem Krokodilhügel auf, im Wildpark bei Bhesakaḷās Wald. "
 }
