Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -1010,6 +1010,7 @@
   "sn-name:1116.sn35.130": "Mit Hāliddikāni ",
   "sn-name:1117.sn35.131": "Nakulas Vater ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
+  "sn-name:1119.sn35.133": "Verahaccāni ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
   "sn-name:1121.sn35.134": "Bei Devadaha ",
   "sn-name:1133.sn35-navapuranavagga": "Das Kapitel über das Alte und das Neue ",
