--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn35.133:0.1": "Verbundene Lehrreden 35.133 ",
   "sn35.133:0.2": "13. Das Kapitel mit Hausbesitzern ",
-  "sn35.133:0.3": "Verahaccāni "
+  "sn35.133:0.3": "Verahaccāni ",
+  "sn35.133:1.1": "Einmal hielt sich der Ehrwürdige Udāyī bei Kāmaṇḍā in Todeyya Mangowäldchen auf. "
 }
