--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.133:0.3": "Verahaccāni ",
   "sn35.133:1.1": "Einmal hielt sich der Ehrwürdige Udāyī bei Kāmaṇḍā in Todeyya Mangowäldchen auf. ",
   "sn35.133:1.2": "Da ging ein Junge, der ein Schüler der Brahmanin vom Verahaccāni-Stamm war, zum Ehrwürdigen Udāyī und tauschte Willkommensgrüße mit ihm aus. ",
-  "sn35.133:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin. "
+  "sn35.133:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin. ",
+  "sn35.133:1.4": "Udāyī leitete diesen Brahmanenschüler mit einem Dhammavortrag an, ermunterte ihn, begeisterte ihn und regte ihn an. "
 }
