--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.133:1.2": "Da ging ein Junge, der ein Schüler der Brahmanin vom Verahaccāni-Stamm war, zum Ehrwürdigen Udāyī und tauschte Willkommensgrüße mit ihm aus. ",
   "sn35.133:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin. ",
   "sn35.133:1.4": "Udāyī leitete diesen Brahmanenschüler mit einem Dhammavortrag an, ermunterte ihn, begeisterte ihn und regte ihn an. ",
-  "sn35.133:1.5": "DA ging dieser Schüler zur Brahmanin vom Verahaccāni-Stamm und sagte zu ihr: "
+  "sn35.133:1.5": "DA ging dieser Schüler zur Brahmanin vom Verahaccāni-Stamm und sagte zu ihr: ",
+  "sn35.133:1.6": "„Bitte, meine Dame, du sollst wissen, "
 }
