--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.133:1.5": "DA ging dieser Schüler zur Brahmanin vom Verahaccāni-Stamm und sagte zu ihr: ",
   "sn35.133:1.6": "„Bitte, meine Dame, du sollst wissen, ",
   "sn35.133:1.7": "dass der Asket Udāyī den Dhamma lehrt, der am Anfang gut, in der Mitte gut und am Ende gut ist, bedeutsam und gut ausgedrückt. Und er legt eine geistliche Übung dar, die in sich geschlossen und rein ist.“ ",
-  "sn35.133:2.1": "„Dann, Schüler, lade ihn für morgen zum Essen ein.“ "
+  "sn35.133:2.1": "„Dann, Schüler, lade ihn für morgen zum Essen ein.“ ",
+  "sn35.133:2.2": "„Ja, meine Dame“, antwortete er. Er ging zu Udāyī und sagte: "
 }
