Translations by gnlaera to translation/pt/blurb/vv-blurbs_translation-pt.json

--- a/translation/pt/blurb/vv-blurbs_translation-pt.json
+++ b/translation/pt/blurb/vv-blurbs_translation-pt.json
@@ -1,3 +1,4 @@
 {
-  "vv-blurbs:vv1": "O Arahant Moggallana pergunta a um deva sobre um bom carma passado."
+  "vv-blurbs:vv1": "O Arahant Moggallana pergunta a um deva sobre um bom carma passado.",
+  "vv-blurbs:vv2": "A generosidade sempre dá resultados."
 }
