Translations by gnlaera to translation/pt/blurb/vv-blurbs_translation-pt.json

--- a/translation/pt/blurb/vv-blurbs_translation-pt.json
+++ b/translation/pt/blurb/vv-blurbs_translation-pt.json
@@ -1,4 +1,5 @@
 {
   "vv-blurbs:vv1": "O Arahant Moggallana pergunta a um deva sobre um bom carma passado.",
-  "vv-blurbs:vv2": "A generosidade sempre dá resultados."
+  "vv-blurbs:vv2": "A generosidade sempre dá resultados.",
+  "vv-blurbs:vv3": "Até mesmo uma simples oferenda para a Sangha retorna muitos frutos."
 }
