--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "sn35.133:1.2": "Da ging ein Junge, der ein Schüler der Brahmanin vom Verahaccāni-Stamm war, zum Ehrwürdigen Udāyī und tauschte Willkommensgrüße mit ihm aus. ",
   "sn35.133:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin. ",
   "sn35.133:1.4": "Udāyī leitete diesen Brahmanenschüler mit einem Dhammavortrag an, ermunterte ihn, begeisterte ihn und regte ihn an. ",
-  "sn35.133:1.5": "DA ging dieser Schüler zur Brahmanin vom Verahaccāni-Stamm und sagte zu ihr: ",
+  "sn35.133:1.5": "Da ging dieser Schüler zur Brahmanin vom Verahaccāni-Stamm und sagte zu ihr: ",
   "sn35.133:1.6": "„Bitte, meine Dame, das sollst du wissen: ",
   "sn35.133:1.7": "Der Asket Udāyī lehrt den Dhamma, der am Anfang gut, in der Mitte gut und am Ende gut ist, bedeutsam und gut ausgedrückt. Und er legt eine geistliche Übung dar, die in sich geschlossen und rein ist.“ ",
   "sn35.133:2.1": "„Dann, Schüler, lade ihn für morgen zum Essen ein.“ ",
