--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -241,7 +241,7 @@
   "dn16:1.28.9": "von Feuer, von Wasser und von Zwietracht.“ ",
   "dn16:1.29.1": "Da begaben sich Sunidha und Vassakāra, die Minister von Magadha, zum Buddha und tauschten Willkommensgrüße mit ihm aus. ",
   "dn16:1.29.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten stellten sie sich zur Seite hin und sagten: ",
-  "dn16:1.29.3": "„Meister Gotama möchte bitte zusammen mit dem Saṅgha der Mönche und Nonnen die heutige Mahlzeit von mir annehmen.“ ",
+  "dn16:1.29.3": "„Meister Gotama wolle bitte zusammen mit dem Saṅgha der Mönche und Nonnen die heutige Mahlzeit von mir annehmen.“ ",
   "dn16:1.29.4": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
   "dn16:1.30.1": "Dann gingen sie, als sie die Zustimmung des Buddha erkannt hatten, zu ihrem eigenen Gästeheim, wo sie eine Auswahl an köstlichen Speisen zubereiten ließen. Dann ließen sie den Buddha über die Zeit benachrichtigen: ",
   "dn16:1.30.2": "„Es ist Zeit, Meister Gotama, das Essen ist fertig.“ ",
