--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -386,7 +386,7 @@
   "dn16:2.14.3": "Sie fuhr mit der Kutsche, soweit es das Gelände erlaubte, stieg dann ab und begab sich zu Fuß zum Buddha. Sie verbeugte sich und setzte sich zur Seite hin. ",
   "dn16:2.14.4": "Der Buddha leitete sie mit einem Dhammavortrag an, ermunterte sie, begeisterte sie und regte sie an. ",
   "dn16:2.14.5": "Dann sagte sie zum Buddha: ",
-  "dn16:2.14.6": "„Herr, der Buddha möchte bitte zusammen mit dem Saṅgha der Mönche und Nonnen die morgige Mahlzeit von mir annehmen.“ ",
+  "dn16:2.14.6": "„Herr, der Buddha wolle bitte zusammen mit dem Saṅgha der Mönche und Nonnen die morgige Mahlzeit von mir annehmen.“ ",
   "dn16:2.14.7": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
   "dn16:2.14.8": "Da erhob sich, als sie die Zustimmung des Buddha erkannt hatte, Ambapālī von ihrem Sitz, verbeugte sich, umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt, und ging. ",
   "dn16:2.15.1": "Auch die Licchaver von Vesālī hörten, dass der Buddha angekommen war und sich in Ambapālīs Mangowäldchen aufhielt. ",
