--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -410,7 +410,7 @@
   "dn16:2.18.1": "Die Licchaver fuhren mit der Kutsche, soweit es das Gelände erlaubte, stiegen dann ab und begaben sich zu Fuß zum Buddha. Sie verbeugten sich und setzten sich zur Seite hin, ",
   "dn16:2.18.2": "und der Buddha leitete sie mit einem Dhammavortrag an, ermunterte sie, begeisterte sie und regte sie an. ",
   "dn16:2.18.3": "Dann sagten sie zum Buddha: ",
-  "dn16:2.18.4": "„Herr, der Buddha möchte bitte zusammen mit dem Saṅgha der Mönche und Nonnen die morgige Mahlzeit von uns annehmen.“ ",
+  "dn16:2.18.4": "„Herr, der Buddha wolle bitte zusammen mit dem Saṅgha der Mönche und Nonnen die morgige Mahlzeit von uns annehmen.“ ",
   "dn16:2.18.5": "Da sagte der Buddha zu den Licchavern: ",
   "dn16:2.18.6": "„Ich habe die morgige Mahlzeit bereits von der Kurtisane Ambapālī angenommen.“ ",
   "dn16:2.18.7": "Da schnippten die Licchaver mit den Fingern und sagten: ",
