--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -876,7 +876,7 @@
   "dn16:4.14.2": "Da ging er zum Buddha, verbeugte sich und setzte sich zur Seite hin. ",
   "dn16:4.14.3": "Der Buddha leitete ihn mit einem Dhammavortrag an, ermunterte ihn, begeisterte ihn und regte ihn an. ",
   "dn16:4.14.4": "Darauf sagte Cunda zum Buddha: ",
-  "dn16:4.15.1": "„Herr, der Buddha möchte bitte zusammen mit dem Saṅgha der Mönche und Nonnen die morgige Mahlzeit von mir annehmen.“ ",
+  "dn16:4.15.1": "„Herr, der Buddha wolle bitte zusammen mit dem Saṅgha der Mönche und Nonnen die morgige Mahlzeit von mir annehmen.“ ",
   "dn16:4.15.2": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
   "dn16:4.16.1": "Da erhob sich, als er die Zustimmung des Buddha erkannt hatte, Cunda von seinem Sitz, verbeugte sich, umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt, und ging. ",
   "dn16:4.17.1": "Als dann die Nacht vorüber war, ließ Cunda in seiner eigenen Wohnung eine Auswahl an köstlichen Speisen zubereiten, darunter viel Schweinefleisch, das am Umschlagen war. Dann ließ er den Buddha über die Zeit benachrichtigen: ",
