--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn35.133:1.7": "Der Asket Udāyī lehrt den Dhamma, der am Anfang gut, in der Mitte gut und am Ende gut ist, bedeutsam und gut ausgedrückt. Und er legt eine geistliche Übung dar, die in sich geschlossen und rein ist.“ ",
   "sn35.133:2.1": "„Dann, Schüler, lade ihn für morgen zum Essen ein.“ ",
   "sn35.133:2.2": "„Ja, meine Dame“, antwortete er. Er ging zu Udāyī und sagte: ",
-  "sn35.133:2.3": "„Herr, Meister Udāyī wolle bitte die morgige Mahlzeit von der Frau meines Lehrers, der Brahmanin vom Verahaccāni-Stamm, annehmen.“ "
+  "sn35.133:2.3": "„Herr, Meister Udāyī wolle bitte die morgige Mahlzeit von der Frau meines Lehrers, der Brahmanin vom Verahaccāni-Stamm, annehmen.“ ",
+  "sn35.133:2.4": "Udāyī schwieg zum Zeichen der Zustimmung. "
 }
