--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.133:2.1": "„Dann, Schüler, lade ihn für morgen zum Essen ein.“ ",
   "sn35.133:2.2": "„Ja, meine Dame“, antwortete er. Er ging zu Udāyī und sagte: ",
   "sn35.133:2.3": "„Herr, Meister Udāyī wolle bitte die morgige Mahlzeit von der Frau meines Lehrers, der Brahmanin vom Verahaccāni-Stamm, annehmen.“ ",
-  "sn35.133:2.4": "Udāyī schwieg zum Zeichen der Zustimmung. "
+  "sn35.133:2.4": "Udāyī schwieg zum Zeichen der Zustimmung. ",
+  "sn35.133:2.5": "Als dann die Nacht vorüber war, kleidete Udāyī sich am Morgen an, nahm Schale und Robe, ging zum Haus der Brahmanin und setzte sich dort auf den ausgebreiteten Sitz. "
 }
