--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.133:2.3": "„Herr, Meister Udāyī wolle bitte die morgige Mahlzeit von der Frau meines Lehrers, der Brahmanin vom Verahaccāni-Stamm, annehmen.“ ",
   "sn35.133:2.4": "Udāyī schwieg zum Zeichen der Zustimmung. ",
   "sn35.133:2.5": "Als dann die Nacht vorüber war, kleidete Udāyī sich am Morgen an, nahm Schale und Robe, ging zum Haus der Brahmanin und setzte sich dort auf den ausgebreiteten Sitz. ",
-  "sn35.133:2.6": "Und die Brahmanin bewirtete und bediente Udāyī eigenhändig mit einer Auswahl an köstlichen Speisen. "
+  "sn35.133:2.6": "Und die Brahmanin bewirtete und bediente Udāyī eigenhändig mit einer Auswahl an köstlichen Speisen. ",
+  "sn35.133:2.7": "Als Udāyī gegessen und Hand und Schale gewaschen hatte, zog sie ein Paar Schuhe an,setzte sich auf einen hohen Sitz, bedeckte ihren Kopf und sagte zu ihm: "
 }
