Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn35.133:2.7": "Als Udāyī gegessen und Hand und Schale gewaschen hatte, zog sie ein Paar Schuhe an,setzte sich auf einen hohen Sitz, bedeckte ihren Kopf und sagte zu ihm: ",
   "sn35.133:2.8": "„Asket, predige den Dhamma.“ ",
   "sn35.133:2.9": "„Es wird dafür eine Gelegenheit geben, Schwester“, antwortete er, dann erhob er sich von seinem Sitz und ging. ",
-  "sn35.133:3.1": "Zum zweiten Mal ging dieser Brahmanenschüler zum Ehrwürdigen Udāyī … "
+  "sn35.133:3.1": "Zum zweiten Mal ging dieser Brahmanenschüler zum Ehrwürdigen Udāyī … ",
+  "sn35.133:3.4": "Und zum zweiten Mal ging dieser Schüler zur Brahmanin vom Verahaccāni-Stamm … "
 }
