Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.133_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn35.133:2.8": "„Asket, predige den Dhamma.“ ",
   "sn35.133:2.9": "„Es wird dafür eine Gelegenheit geben, Schwester“, antwortete er, dann erhob er sich von seinem Sitz und ging. ",
   "sn35.133:3.1": "Zum zweiten Mal ging dieser Brahmanenschüler zum Ehrwürdigen Udāyī … ",
-  "sn35.133:3.4": "Und zum zweiten Mal ging dieser Schüler zur Brahmanin vom Verahaccāni-Stamm … "
+  "sn35.133:3.4": "Und zum zweiten Mal ging dieser Schüler zur Brahmanin vom Verahaccāni-Stamm … ",
+  "sn35.133:4.1": "Sie sagte zu ihm: „Du preist den Asketen Udāyī noch genauso.  "
 }
