Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -251,5 +251,6 @@
   "mn60:39.2": "und der in diesem Leben ohne Wünsche lebt, erloschen, kühl geworden, voller Seligkeit, mit göttlich gewordenem Selbst? ",
   "mn60:40-54.1": "Da erscheint ein Klargewordener in der Welt, vollendet, ein vollkommen erwachter Buddha … ",
   "mn60:40-54.2": "Ein Hausbesitzer hört diese Lehre, oder das Kind eines Hausbesitzers oder jemand, der in einer guten Familie wiedergeboren ist. … ",
-  "mn60:40-54.3": "Er gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. "
+  "mn60:40-54.3": "Er gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. ",
+  "mn60:40-54.4": "Dann tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … "
 }
