--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -252,5 +252,6 @@
   "mn60:40-54.1": "Da erscheint ein Klargewordener in der Welt, vollendet, ein vollkommen erwachter Buddha … ",
   "mn60:40-54.2": "Ein Hausbesitzer hört diese Lehre, oder das Kind eines Hausbesitzers oder jemand, der in einer guten Familie wiedergeboren ist. … ",
   "mn60:40-54.3": "Er gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. ",
-  "mn60:40-54.4": "Dann tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … "
+  "mn60:40-54.4": "Dann tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … ",
+  "mn60:40-54.5": "in die zweite Vertiefung … "
 }
