Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -254,5 +254,6 @@
   "mn60:40-54.3": "Er gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. ",
   "mn60:40-54.4": "Dann tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … ",
   "mn60:40-54.5": "in die zweite Vertiefung … ",
-  "mn60:40-54.6": "in die dritte Vertiefung … "
+  "mn60:40-54.6": "in die dritte Vertiefung … ",
+  "mn60:40-54.7": "in die vierte Vertiefung. "
 }
