--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -255,5 +255,6 @@
   "mn60:40-54.4": "Dann tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … ",
   "mn60:40-54.5": "in die zweite Vertiefung … ",
   "mn60:40-54.6": "in die dritte Vertiefung … ",
-  "mn60:40-54.7": "in die vierte Vertiefung. "
+  "mn60:40-54.7": "in die vierte Vertiefung. ",
+  "mn60:55.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erinnerung an frühere Leben. … "
 }
