Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -256,5 +256,5 @@
   "mn60:40-54.5": "in die zweite Vertiefung … ",
   "mn60:40-54.6": "in die dritte Vertiefung … ",
   "mn60:40-54.7": "in die vierte Vertiefung. ",
-  "mn60:55.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erinnerung an frühere Leben. … "
+  "mn60:55.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erinnerung an frühere Leben. "
 }
