--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -258,5 +258,6 @@
   "mn60:40-54.7": "in die vierte Vertiefung. ",
   "mn60:55.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erinnerung an frühere Leben. ",
   "mn60:55.2": "Er erinnert sich an viele Arten früherer Leben mit den Merkmalen und Einzelheiten. ",
-  "mn60:55.3": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen. "
+  "mn60:55.3": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen. ",
+  "mn60:55.4": "Mit geläuterter und übermenschlicher Hellsichtigkeit sieht er Lebewesen, wie sie hinscheiden und wieder geboren werden – gering oder hochstehend, schön oder hässlich, an einem guten oder einem schlechten Ort. … Er versteht, wie Lebewesen entsprechend ihrer Taten wiedergeboren werden. "
 }
