--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -260,5 +260,6 @@
   "mn60:55.2": "Er erinnert sich an viele Arten früherer Leben mit den Merkmalen und Einzelheiten. ",
   "mn60:55.3": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen. ",
   "mn60:55.4": "Mit geläuterter und übermenschlicher Hellsichtigkeit sieht er Lebewesen, wie sie hinscheiden und wieder geboren werden – gering oder hochstehend, schön oder hässlich, an einem guten oder einem schlechten Ort. … Er versteht, wie Lebewesen entsprechend ihrer Taten wiedergeboren werden. ",
-  "mn60:55.5": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt – dann streckt er ihn aus auf die Erkenntnis, dass die Befleckungen aufgelöst sind. "
+  "mn60:55.5": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt – dann streckt er ihn aus auf die Erkenntnis, dass die Befleckungen aufgelöst sind. ",
+  "mn60:55.6": "Er versteht wahrhaftig: ‚Das ist das Leiden‘, ‚das ist der Ursprung des Leidens‘, ‚das ist das Aufhören des Leidens‘, ‚das ist die Übung, die zum Aufhören des Leidens führt‘. "
 }
