Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn39_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn39_translation-de-sabbamitta.json
@@ -127,7 +127,7 @@
   "mn39:21.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt – dann streckt er ihn aus auf die Erkenntnis, dass die Befleckungen aufgelöst sind. ",
   "mn39:21.2": "Er versteht wahrhaftig: ‚Das ist das Leiden‘, ‚das ist der Ursprung des Leidens‘, ‚das ist das Aufhören des Leidens‘, ‚das ist die Übung, die zum Aufhören des Leidens führt‘. ",
   "mn39:21.3": "Er versteht wahrhaftig: ‚Das sind die Befleckungen‘, ‚das ist der Ursprung der Befleckungen‘, ‚das ist das Aufhören der Befleckungen‘, ‚das ist die Übung, die zum Aufhören der Befleckungen führt‘. ",
-  "mn39:21.4": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Fortsetzung des Daseins und der Unwissenheit. ",
+  "mn39:21.4": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Wiedergeburt und der Unwissenheit. ",
   "mn39:21.5": "Wenn er befreit ist, weiß er, er ist befreit. ",
   "mn39:21.6": "Er versteht: ‚Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "mn39:21.7": "Wie ein See in einer Bergschlucht, der durchsichtig, klar und ungetrübt wäre. Ein Mensch mit klaren Augen, der am Ufer stünde, würde die Schnecken und Muscheln, Steine und Kiesel sehen und auch die Fischschwärme, die herumschwämmen oder stillstünden. ",
