--- a/translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn51_translation-de-sabbamitta.json
@@ -176,7 +176,7 @@
   "mn51:26.1": "Wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt – dann streckt er ihn aus auf die Erkenntnis, dass die Befleckungen aufgelöst sind. ",
   "mn51:26.2": "Er versteht wahrhaftig: ‚Das ist das Leiden‘, ‚das ist der Ursprung des Leidens‘, ‚das ist das Aufhören des Leidens‘, ‚das ist die Übung, die zum Aufhören des Leidens führt‘. ",
   "mn51:27.1": "Er versteht wahrhaftig: ‚Das sind die Befleckungen‘, ‚das ist der Ursprung der Befleckungen‘, ‚das ist das Aufhören der Befleckungen‘, ‚das ist die Übung, die zum Aufhören der Befleckungen führt‘. ",
-  "mn51:27.2": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Fortsetzung des Daseins und der Unwissenheit. ",
+  "mn51:27.2": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Wiedergeburt und der Unwissenheit. ",
   "mn51:27.3": "Wenn er befreit ist, weiß er, er ist befreit. ",
   "mn51:27.4": "Er versteht: ‚Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "mn51:28.1": "Das nennt man einen Menschen, der weder sich noch andere kasteit, der sich der Übung verschreibt, weder sich noch andere zu kasteien, ",
