Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn2_translation-de-sabbamitta.json
@@ -562,7 +562,7 @@
   "dn2:98.2": "Ebenso streckt ein Mönch, wenn sein Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, ihn aus und projiziert ihn auf die Erkenntnis, dass die Befleckungen aufgelöst sind. ",
   "dn2:98.3": "Er versteht wahrhaftig: ‚Das ist das Leiden‘, ‚das ist der Ursprung des Leidens‘, ‚das ist das Aufhören des Leidens‘, ‚das ist die Übung, die zum Aufhören des Leidens führt‘. ",
   "dn2:98.4": "Er versteht wahrhaftig: ‚Das sind die Befleckungen‘, ‚das ist der Ursprung der Befleckungen‘, ‚das ist das Aufhören der Befleckungen‘,  ‚das ist die Übung, die zum Aufhören der Befleckungen führt‘. ",
-  "dn2:98.5": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Fortsetzung des Daseins und der Unwissenheit. ",
+  "dn2:98.5": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Wiedergeburt und der Unwissenheit. ",
   "dn2:98.6": "Wenn er befreit ist, weiß er, er ist befreit. ",
   "dn2:98.7": "Er versteht: ‚Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "dn2:98.8": "Auch das, großer König, ist eine Frucht des Asketenlebens, die in diesem Leben ersichtlich ist, die besser und erlesener ist als die vorigen. ",
