--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -264,5 +264,6 @@
   "mn60:55.6": "Er versteht wahrhaftig: ‚Das ist das Leiden‘, ‚das ist der Ursprung des Leidens‘, ‚das ist das Aufhören des Leidens‘, ‚das ist die Übung, die zum Aufhören des Leidens führt‘. ",
   "mn60:55.7": "Er versteht wahrhaftig: ‚Das sind die Befleckungen‘, ‚das ist der Ursprung der Befleckungen‘, ‚das ist das Aufhören der Befleckungen‘,  ‚das ist die Übung, die zum Aufhören der Befleckungen führt‘. ",
   "mn60:55.8": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Wiedergeburt und der Unwissenheit. ",
-  "mn60:55.9": "Wenn er befreit ist, weiß er, er ist befreit. "
+  "mn60:55.9": "Wenn er befreit ist, weiß er, er ist befreit. ",
+  "mn60:55.10": "Er versteht: ‚Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ "
 }
