--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "iti102:2.1": "Io dico che la distruzione degli impulsi è per uno che conosce e vede, non per uno che non conosce e non vede. "
+  "iti102:2.1": "Io dico che la distruzione degli impulsi è per uno che conosce e vede, non per uno che non conosce e non vede. ",
+  "iti102:2.2": "E come la distruzione...? "
 }
