Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -266,5 +266,6 @@
   "mn60:55.8": "Wenn er das erkennt und sieht, ist sein Geist befreit von den Befleckungen der Sinnlichkeit, des Wunsches nach Wiedergeburt und der Unwissenheit. ",
   "mn60:55.9": "Wenn er befreit ist, weiß er, er ist befreit. ",
   "mn60:55.10": "Er versteht: ‚Wiedergeburt ist beendet; das geistliche Leben ist erfüllt; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
-  "mn60:56.1": "Das nennt man einen Menschen, der weder sich noch andere kasteit, der sich der Übung verschreibt, weder sich noch andere zu kasteien, "
+  "mn60:56.1": "Das nennt man einen Menschen, der weder sich noch andere kasteit, der sich der Übung verschreibt, weder sich noch andere zu kasteien, ",
+  "mn60:56.2": "und der in diesem Leben ohne Wünsche lebt, erloschen, kühl geworden, voller Seligkeit, mit göttlich gewordenem Selbst.“ "
 }
