--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -269,5 +269,6 @@
   "mn60:56.1": "Das nennt man einen Menschen, der weder sich noch andere kasteit, der sich der Übung verschreibt, weder sich noch andere zu kasteien, ",
   "mn60:56.2": "und der in diesem Leben ohne Wünsche lebt, erloschen, kühl geworden, voller Seligkeit, mit göttlich gewordenem Selbst.“ ",
   "mn60:57.1": "Als der Buddha geendet hatte, sagten die Brahmanen und Hausbesitzer von Sālā zu ihm: ",
-  "mn60:57.2": "„Vortrefflich, Meister Gotama! Vortrefflich! "
+  "mn60:57.2": "„Vortrefflich, Meister Gotama! Vortrefflich! ",
+  "mn60:57.3": "Als würde er das Umgestürzte aufrichten oder das Verborgene enthüllen oder den Verirrten den Weg weisen oder im Dunkeln ein Licht anzünden, sodass Menschen mit klaren Augen sehen könnten, was da ist, so hat Meister Gotama die Lehre auf vielerlei Weise klargemacht. "
 }
