--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -271,5 +271,6 @@
   "mn60:57.1": "Als der Buddha geendet hatte, sagten die Brahmanen und Hausbesitzer von Sālā zu ihm: ",
   "mn60:57.2": "„Vortrefflich, Meister Gotama! Vortrefflich! ",
   "mn60:57.3": "Als würde er das Umgestürzte aufrichten oder das Verborgene enthüllen oder den Verirrten den Weg weisen oder im Dunkeln ein Licht anzünden, sodass Menschen mit klaren Augen sehen könnten, was da ist, so hat Meister Gotama die Lehre auf vielerlei Weise klargemacht. ",
-  "mn60:57.4": "Wir nehmen Zuflucht zum Meister Gotama, zur Lehre und zum Saṅgha der Mönche und Nonnen. "
+  "mn60:57.4": "Wir nehmen Zuflucht zum Meister Gotama, zur Lehre und zum Saṅgha der Mönche und Nonnen. ",
+  "mn60:57.5": "Von diesem Tag an soll Meister Gotama mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat.“ "
 }
