Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "iti102:2.1": "Io dico che la distruzione degli impulsi è per uno che conosce e vede, non per uno che non conosce e non vede. ",
   "iti102:2.2": "E come la distruzione...? ",
-  "iti102:2.3": "Qui c’è la distruzione degli impulsi per uno che conosce e vede il dukkha, la causa del dukkha, la fine del dukkha, e il sentiero che conduce alla fine del dukkha. "
+  "iti102:2.3": "Qui c’è la distruzione degli impulsi per uno che conosce e vede il dukkha, la causa del dukkha, la fine del dukkha, e il sentiero che conduce alla fine del dukkha. ",
+  "iti102:3.1": "Al praticante che si allena * "
 }
