--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -4,5 +4,6 @@
   "iti102:2.3": "Qui c’è la distruzione degli impulsi per uno che conosce e vede il dukkha, la causa del dukkha, la fine del dukkha, e il sentiero che conduce alla fine del dukkha. ",
   "iti102:3.1": "Al praticante che si allena * ",
   "iti102:3.2": "* ",
-  "iti102:3.3": "* "
+  "iti102:3.3": "* ",
+  "iti102:3.4": "* "
 }
