--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti102:3.1": "Al praticante che si allena * ",
   "iti102:3.2": "* ",
   "iti102:3.3": "* ",
-  "iti102:3.4": "* "
+  "iti102:3.4": "* ",
+  "iti102:4.1": "* "
 }
