--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -6,5 +6,6 @@
   "iti102:3.2": "* ",
   "iti102:3.3": "* ",
   "iti102:3.4": "* ",
-  "iti102:4.1": "* "
+  "iti102:4.1": "* ",
+  "iti102:4.2": "la suprema conoscenza della liberazione. "
 }
