Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -7,5 +7,6 @@
   "iti102:3.3": "* ",
   "iti102:3.4": "* ",
   "iti102:4.1": "* ",
-  "iti102:4.2": "la suprema conoscenza della liberazione. "
+  "iti102:4.2": "la suprema conoscenza della liberazione. ",
+  "iti102:4.3": "Sorge la conoscenza della distruzione "
 }
