Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -9,5 +9,6 @@
   "iti102:4.1": "* ",
   "iti102:4.2": "la suprema conoscenza della liberazione. ",
   "iti102:4.3": "Sorge la conoscenza della distruzione ",
-  "iti102:4.4": "e che tutte le catene sono spezzate "
+  "iti102:4.4": "e che tutte le catene sono spezzate ",
+  "iti102:5.1": "Non con pigrizia "
 }
