--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -11,5 +11,5 @@
   "iti102:4.3": "Sorge la conoscenza della distruzione ",
   "iti102:4.4": "e che tutte le catene sono spezzate ",
   "iti102:5.1": "Non con pigrizia ",
-  "iti102:5.2": "non comprendendo i folli "
+  "iti102:5.2": "non da folli che non comprendono, "
 }
