--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -11,6 +11,6 @@
   "iti102:4.3": "Sorge la conoscenza della distruzione ",
   "iti102:4.4": "e che tutte le catene sono spezzate ",
   "iti102:5.1": "Dai pigri ",
-  "iti102:5.2": "e dai folli che non comprendono, ",
+  "iti102:5.2": "e dai folli senza comprensione, ",
   "iti102:5.3": "il Nibbāna non può essere ottenuto, "
 }
