--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -12,5 +12,5 @@
   "iti102:4.4": "e che tutte le catene sono spezzate ",
   "iti102:5.1": "Dai pigri ",
   "iti102:5.2": "e dai folli senza comprensione, ",
-  "iti102:5.3": "il Nibbāna non può essere ottenuto, "
+  "iti102:5.3": "non può essere ottenuto il Nibbāna, "
 }
