Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "iti103:2.1": "Qualsiasi contemplativo o bramino che non conosca così com’è (yathābhūtaṁ) ‘questo è il dukkha,’ ‘questa è la causa del dukkha,’ ‘questa è la fine del dukkha,’ ‘questo è il percorso che conduce alla fine del dukkha.’ ** "
+  "iti103:2.1": "Qualsiasi contemplativo o bramino che non conosca così com’è (yathābhūtaṁ) ‘questo è il dukkha,’ ‘questa è la causa del dukkha,’ ‘questa è la fine del dukkha,’ ‘questo è il percorso che conduce alla fine del dukkha.’ ** ",
+  "iti103:2.2": "quei contemplativi o bramini, o considerati contemplativi tra i contemplativi, o considerati bramini tra i bramini, e questi venerabili non "
 }
