--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "iti103:2.1": "Qualsiasi contemplativo o bramino che non conosca così com’è (yathābhūtaṁ) ‘questo è il dukkha,’ ‘questa è la causa del dukkha,’ ‘questa è la fine del dukkha,’ ‘questo è il percorso che conduce alla fine del dukkha.’ ** ",
   "iti103:2.2": "nessuno di questi contemplativi o bramini, o considerati contemplativi tra i contemplativi, o considerati bramini tra i bramini, di questi venerabili ha raggiunto il fine ultimo della vita contemplativa o dell’essere un bramino, ovvero nella liberazione attraverso la saggezza acquisita direttamente in questa vita con la conoscenza superiore** ",
-  "iti103:3.1": "Ma invece chiunque conosca.... "
+  "iti103:3.1": "Ma invece chiunque conosca.... ",
+  "iti103:3.2": ".. "
 }
