Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -4,5 +4,6 @@
   "iti103:3.1": "Ma invece chiunque conosca.... ",
   "iti103:3.2": ".. ",
   "iti103:4.1": "Chi non conosce il Dukkha, ",
-  "iti103:4.2": "l’origine del dukkha, "
+  "iti103:4.2": "l’origine del dukkha, ",
+  "iti103:4.3": "dove/quando ovunque dukkha "
 }
