Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -7,5 +7,6 @@
   "iti103:4.2": "l’origine del dukkha, ",
   "iti103:4.3": "dove/quando ovunque dukkha ",
   "iti103:4.4": "completo è finito ",
-  "iti103:4.5": "non conoscono quel percorso "
+  "iti103:4.5": "non conoscono quel percorso ",
+  "iti103:4.6": "che conduce alla pacificazione della sofferenza. ** "
 }
