Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -11,5 +11,5 @@
   "iti103:4.6": "che conduce alla pacificazione della sofferenza. ** ",
   "iti103:5.1": "Senza la liberazione del cuore ",
   "iti103:5.2": "e la liberazione attraverso la sapienza ",
-  "iti103:5.3": "incapaci di portare alla fine "
+  "iti103:5.3": "sono incapaci di portare a termine "
 }
