Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -12,5 +12,6 @@
   "iti103:5.1": "Senza la liberazione del cuore ",
   "iti103:5.2": "e la liberazione attraverso la sapienza ",
   "iti103:5.3": "sono incapaci di portare a termine ",
-  "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. "
+  "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. ",
+  "iti103:6.1": "Quello che conoscono il dukkha "
 }
