Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -15,5 +15,6 @@
   "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. ",
   "iti103:6.1": "Quello che conoscono il dukkha ",
   "iti103:6.2": "l’origine del dukkha, ",
-  "iti103:6.3": "quando il dukkha in ogni modo * "
+  "iti103:6.3": "quando il dukkha in ogni modo * ",
+  "iti103:6.4": "è completamente terminato, "
 }
