Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -18,5 +18,6 @@
   "iti103:6.3": "quando il dukkha in ogni modo * ",
   "iti103:6.4": "è completamente terminato, ",
   "iti103:6.5": "e conoscono quel percorso * ",
-  "iti103:6.6": "che conduce alla pacificazione della sofferenza. * "
+  "iti103:6.6": "che conduce alla pacificazione della sofferenza. * ",
+  "iti103:7.1": "con la perfetta liberazione del cuore * "
 }
