Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti103:2.2": "nessuno di loro, contemplativi o bramini, considerati contemplativi tra i contemplativi o considerati bramini tra i bramini, tra questi venerabili ha raggiunto il fine ultimo della vita contemplativa o dell’essere un bramino, ovvero la liberazione attraverso la saggezza acquisita direttamente in questa vita con la conoscenza superiore** ",
   "iti103:3.1": "Ma invece chiunque conosca.... ",
   "iti103:3.2": ".. ",
-  "iti103:4.1": "Chi non conosce il Dukkha, ",
+  "iti103:4.1": "Chiunque non conosca il Dukkha, ",
   "iti103:4.2": "l’origine del dukkha, ",
   "iti103:4.3": "quando il dukkha in ogni modo ",
   "iti103:4.4": "è completamente terminato, ",
