Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -13,7 +13,7 @@
   "iti103:5.2": "e della liberazione attraverso la sapienza, ",
   "iti103:5.3": "sono incapaci di giungere alla fine, ",
   "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. ",
-  "iti103:6.1": "Quello che conoscono il dukkha ",
+  "iti103:6.1": "Quelli che conoscono il dukkha ",
   "iti103:6.2": "l’origine del dukkha, ",
   "iti103:6.3": "quando il dukkha in ogni modo * ",
   "iti103:6.4": "è completamente terminato, ",
