Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -21,6 +21,6 @@
   "iti103:6.6": "che conduce alla pacificazione della sofferenza. * ",
   "iti103:7.1": "con la perfetta liberazione del cuore * ",
   "iti103:7.2": "e la liberazione attraverso la sapienza * ",
-  "iti103:7.3": "sono capaci (in grado) di portare a termine ",
+  "iti103:7.3": "sono capaci (in grado) di arrivare alla fine, ",
   "iti103:7.4": "e non sono destinati verso la nascita e vecchiaia. * "
 }
