Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -22,7 +22,7 @@
   "mn60:6.2": "Sie sagen: ",
   "mn60:6.3": "‚Geben, Opfer und Spenden sind sinnvoll. Es gibt eine Frucht und ein Ergebnis von guten und schlechten Taten. Es gibt ein Leben nach dem Tod. Es gibt so etwas wie Mutter und Vater oder Wesen, die durch unmittelbares Erscheinen wiedergeboren werden. Und es gibt Asketen und Brahmanen, die richtig verwirklicht sind, richtig geübt haben, die das Leben nach dem Tod erklären, nachdem sie es durch eigene Einsicht erkannt haben.‘ ",
   "mn60:6.4": "Was denkt ihr, Hausbesitzer? ",
-  "mn60:6.5": "Widersprachen diese Doktrinen einander nicht diametral?“ ",
+  "mn60:6.5": "Widersprechen diese Doktrinen einander nicht diametral?“ ",
   "mn60:6.6": "„Ja, Herr.“ ",
   "mn60:7.1": "„Da das so ist, betrachten wir die Asketen und Brahmanen, die die Ansicht haben, ",
   "mn60:7.2": "Geben, Opfer und Spenden hätten keinen Sinn usw. ",
