Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -78,7 +78,7 @@
   "mn60:14.5": "Wenn man am nördlichen Ufer des Ganges entlangginge und spenden und opfern würde und andere ermuntern würde, das Gleiche zu tun, würde daraus Verdienst entstehen und auch eine Auswirkung von Verdienst. ",
   "mn60:14.6": "In Geben, Selbstbeherrschung, Zügelung und Wahrhaftigkeit liegt Verdienst und auch eine Auswirkung von Verdienst.‘ ",
   "mn60:14.7": "Was denkt ihr, Hausbesitzer? ",
-  "mn60:14.8": "Widersprachen diese Doktrinen einander nicht diametral?“ ",
+  "mn60:14.8": "Widersprechen diese Doktrinen einander nicht diametral?“ ",
   "mn60:14.9": "„Ja, Herr.“ ",
   "mn60:15.1": "„Da das so ist, betrachten wir die Asketen und Brahmanen, die die Ansicht haben, ",
   "mn60:15.2": "der Täter tue nichts Schlechtes, wenn er bestrafe, verstümmele, foltere usw. ",
