Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -137,7 +137,7 @@
   "mn60:22.7": "Es gibt Kraft, Energie, menschliche Stärke oder Tatkraft. ",
   "mn60:22.8": "Es trifft nicht zu, dass alle Lebewesen, alle lebenden Geschöpfe, alle Wesen, alle Seelen ohne Kontrolle, Kraft oder Energie wären oder dass sie, vom Schicksal, den Umständen und der Natur getrieben, in den sechs Wiedergeburtsklassen Glück und Schmerz erfahren würden.‘ ",
   "mn60:22.9": "Was denkt ihr, Hausbesitzer? ",
-  "mn60:22.10": "Widersprachen diese Doktrinen einander nicht diametral?“ ",
+  "mn60:22.10": "Widersprechen diese Doktrinen einander nicht diametral?“ ",
   "mn60:22.11": "„Ja, Herr.“ ",
   "mn60:23.1": "„Da das so ist, betrachten wir die Asketen und Brahmanen, die die Ansicht haben, ",
   "mn60:23.2": "es gebe keinen Grund und keine Ursache für die Verunreinigung der Lebewesen usw. ",
