Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -185,7 +185,7 @@
   "mn60:30.2": "Sie sagen: ",
   "mn60:30.3": "‚Es gibt vollständig formlose Meditationszustände.‘ ",
   "mn60:30.4": "Was denkt ihr, Hausbesitzer? ",
-  "mn60:30.5": "Widersprachen diese Doktrinen einander nicht diametral?“ ",
+  "mn60:30.5": "Widersprechen diese Doktrinen einander nicht diametral?“ ",
   "mn60:30.6": "„Ja, Herr.“ ",
   "mn60:31.1": "„Ein vernünftiger Mensch denkt darüber nach: ",
   "mn60:31.2": "‚Manche Asketen und Brahmanen sagen, ",
