Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "iti104:2.1": "Qualsiasi cercatore dalla perfetta moralità, samādhi, sapienza, liberazione, conoscenza e visione della liberazione, che è un oratore, istruttore, maestro, che esorta/incoraggia, ispira, delizia, insegnante competente del buon Dhamma, io vi dico che vedere, ",
   "iti104:2.2": "ascoltare, ",
-  "iti104:2.3": "visitare, "
+  "iti104:2.3": "visitare, ",
+  "iti104:2.6": "quel cercatore è di grande aiuto per voi. "
 }
