Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -3,5 +3,6 @@
   "iti104:2.2": "ascoltare, ",
   "iti104:2.3": "visitare, ",
   "iti104:2.4": "stare vicino / servire ",
+  "iti104:2.5": "ricordare, ",
   "iti104:2.6": "quel cercatore è di grande aiuto per voi. "
 }
