Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -74,7 +74,7 @@
   "mn60:14.1": "Und es gibt Asketen und Brahmanen, deren Doktrin dieser diametral widerspricht. Sie sagen: ",
   "mn60:14.2": "‚Der Täter tut etwas Schlechtes, wenn er bestraft, verstümmelt, foltert, kränkt, unterdrückt oder einschüchtert oder wenn er andere zu diesen Dingen anstiftet. Er tut etwas Schlechtes, wenn er tötet, stiehlt, in Häuser einbricht, Vermögen plündert, aus abgelegenen Gebäuden stiehlt, Landstraßen unsicher macht, Ehebruch begeht und lügt. ",
   "mn60:14.3": "Wenn man alle lebenden Geschöpfe auf dieser Erde mit einem rasiermesserscharfen Chakram in einen einzigen Fleischhaufen, eine einzige Fleischmasse verwandeln würde, würde daraus Böses entstehen und auch eine Auswirkung von Bösem. ",
-  "mn60:14.4": "Wenn man am südlichen Ufer des Ganges entlangginge und töten, verstümmeln und foltern würde und andere anstiften würde, dasselbe zu tun, würde daraus Böses entstehen und auch eine Auswirkung von Bösem. ",
+  "mn60:14.4": "Wenn man am südlichen Ufer des Ganges entlangginge und töten, verstümmeln und foltern würde und andere anstiften würde, das Gleiche zu tun, würde daraus Böses entstehen und auch eine Auswirkung von Bösem. ",
   "mn60:14.5": "Wenn man am nördlichen Ufer des Ganges entlangginge und spenden und opfern würde und andere ermuntern würde, das Gleiche zu tun, würde daraus Verdienst entstehen und auch eine Auswirkung von Verdienst. ",
   "mn60:14.6": "In Geben, Selbstbeherrschung, Zügelung und Wahrhaftigkeit liegt Verdienst und auch eine Auswirkung von Verdienst.‘ ",
   "mn60:14.7": "Was denkt ihr, Hausbesitzer? ",
