Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -135,7 +135,7 @@
   "mn60:22.5": "Es gibt einen Grund und eine Ursache für die Läuterung der Lebewesen. ",
   "mn60:22.6": "Lebewesen werden aus einem Grund und einer Ursache geläutert. ",
   "mn60:22.7": "Es gibt Kraft, Energie, menschliche Stärke oder Tatkraft. ",
-  "mn60:22.8": "Es trifft nicht zu, dass alle Lebewesen, alle lebenden Geschöpfe, alle Wesen, alle Seelen ohne Kontrolle, Kraft oder Energie wären oder dass sie, vom Schicksal, den Umständen und der Natur getrieben, in den sechs Wiedergeburtsklassen Glück und Schmerz erfahren würden.‘ ",
+  "mn60:22.8": "Es ist nicht so, dass alle Lebewesen, alle lebenden Geschöpfe, alle Wesen, alle Seelen ohne Kontrolle, Kraft oder Energie wären oder dass sie, vom Schicksal, den Umständen und der Natur getrieben, in den sechs Wiedergeburtsklassen Glück und Schmerz erfahren würden.‘ ",
   "mn60:22.9": "Was denkt ihr, Hausbesitzer? ",
   "mn60:22.10": "Widersprechen diese Doktrinen einander nicht diametral?“ ",
   "mn60:22.11": "„Ja, Herr.“ ",
