Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti104:2.4": "stare vicino / servire ",
   "iti104:2.5": "ricordare, ",
   "iti104:2.6": "seguire quel cercatore è di grande aiuto per voi. ",
-  "iti104:2.7": "Perchè questo? "
+  "iti104:2.7": "Perchè questo? ",
+  "iti104:2.8": "Tra i cercatori di questo tipo che servono, si accompagnano, stanno vicini, chi è sono incompleti di tutta la moralità "
 }
